# swagger.yaml
@@ -16,7 +16,7 @@ components:
       name: auth-token
 
   schemas:
-    car:
+    task:
       type: object
       properties:
         id:
@@ -98,23 +98,23 @@ paths:
                     type: string
 
 
-  /cars:
+  /tasks:
     get:
-      summary: Retrieves a list of cars
-      description: Retrieves a list of cars as JSON objects.
+      summary: Retrieves a list of tasks
+      description: Retrieves a list of tasks as JSON objects.
       responses:
         200:
-          description: A list of car JSON objects in an array.
+          description: A list of task JSON objects in an array.
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/car"
+                  $ref: "#/components/schemas/task"
     
     post:
-      summary: Create a new car
-      description: Create a new car
+      summary: Create a new task
+      description: Create a new task
       security:
         - ApiKeyAuth: []      
       requestBody:
@@ -122,20 +122,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/car"
+              $ref: "#/components/schemas/task"
 
       responses:
         201:
-          description: car created succesfully
+          description: task created succesfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/car"
+                $ref: "#/components/schemas/task"
   
-  /cars/{id}:
+  /tasks/{id}:
     get:
-      summary: Specific car
-      description: Retrieves a specific car based on it id.
+      summary: Specific task
+      description: Retrieves a specific task based on it id.
       parameters:
         - in: path
           name: id
@@ -145,17 +145,17 @@ paths:
             type: string
       responses:
         200:
-          description: A car in the format of a JSON object.
+          description: A task in the format of a JSON object.
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/car"
+                  $ref: "#/components/schemas/task"
    
     put:
-      summary: Updates a specific car
-      description: Updates a specific car based on it id
+      summary: Updates a specific task
+      description: Updates a specific task based on it id
       security:
         - ApiKeyAuth: []            
       parameters:
@@ -170,19 +170,19 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/car"
+              $ref: "#/components/schemas/task"
 
       responses:
         201:
-          description: car updated succesfully
+          description: task updated succesfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/car"
+                $ref: "#/components/schemas/task"
 
     delete:
-      summary: Deletes a specific car
-      description: Deletes a specific car based on it id
+      summary: Deletes a specific task
+      description: Deletes a specific task based on it id
       security:
         - ApiKeyAuth: []            
       parameters:
@@ -195,8 +195,8 @@ paths:
 
       responses:
         201:
-          description: car deleted succesfully
+          description: task deleted succesfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/car"
+                $ref: "#/components/schemas/task"
